# Axiom-Matrix

./: Cargo.toml  DEPLOYMENT.md  PATTERN_SUMMARY.md  PRINCIPLES.md  README.md  STRATEGY.md  VALIDATION.md
ARTIFACTS/: x_promo_thread.md
src/: agents.rs  encryption.rs  ethics.rs  gpu.rs  integrity.rs  lib.rs  lsp.rs  main.rs  orchestration.rs  ux.rs
src/ui/: mod.rs
