[package]
name = "agent-matrix"
version = "1.0.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
blake3 = "1.5.3"
tokio = { version = "1.40.0", features = ["full"] }
vulkano = "0.34.0"
crossterm = "0.28.1"
ratatui = "0.28.1"
vte = "0.13.1"
rand = { version = "0.9.2", features = ["std_rng"] }
pqcrypto-kyber = "0.7.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
async-trait = "0.1.81"
candle-core = "0.3.0"
candle-nn = "0.3.0"
candle-transformers = "0.3.0"
hf-hub = "0.3.0"
tokenizers = "0.15.0"
fuzzy-matcher = "0.3.0"
clap = { version = "4.5.4", features = ["derive"] }
notify = "6.1.1"
gpu-allocator = "0.3.0"
tower-lsp = "0.19.0"
lsp-types = "0.97.0"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["test-util"] }

[build-dependencies]
vulkano-shaders = "0.34.0"
